Set up sample testing with Page Object Models

--- a/report/index.html
+++ b/report/index.html
@@ -88,7 +88,7 @@
                 <canvas id="tests-canvas" width="100" height="100"></canvas>
                 <h2>Tests</h2>
                 <div class="list-group">
-                    <p id="tests-results" class="list-group-item list-group-item-action">1 passed, 1 total</p>
+                    <p id="tests-results" class="list-group-item list-group-item-action">2 passed, 2 total</p>
                 </div>
             </div>
             <!-- /.col-lg-4 -->
@@ -120,13 +120,13 @@
   &quot;numFailedTestSuites&quot;: 0,
   &quot;numFailedTests&quot;: 0,
   &quot;numPassedTestSuites&quot;: 1,
-  &quot;numPassedTests&quot;: 1,
+  &quot;numPassedTests&quot;: 2,
   &quot;numPendingTestSuites&quot;: 0,
   &quot;numPendingTests&quot;: 0,
   &quot;numRuntimeErrorTestSuites&quot;: 0,
   &quot;numTodoTests&quot;: 0,
   &quot;numTotalTestSuites&quot;: 1,
-  &quot;numTotalTests&quot;: 1,
+  &quot;numTotalTests&quot;: 2,
   &quot;openHandles&quot;: [],
   &quot;snapshot&quot;: {
     &quot;added&quot;: 0,
@@ -144,19 +144,19 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1592537424564,
+  &quot;startTime&quot;: 1592543460161,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
       &quot;leaks&quot;: false,
       &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 1,
+      &quot;numPassingTests&quot;: 2,
       &quot;numPendingTests&quot;: 0,
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1592537427856,
-        &quot;start&quot;: 1592537424630
+        &quot;end&quot;: 1592543467536,
+        &quot;start&quot;: 1592543460232
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -168,19 +168,31 @@
         &quot;updated&quot;: 0,
         &quot;uncheckedKeys&quot;: []
       },
-      &quot;testFilePath&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;-base-page.test.js&quot;,
+      &quot;testFilePath&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;google-page.test.js&quot;,
       &quot;testResults&quot;: [
         {
           &quot;ancestorTitles&quot;: [
-            &quot;Signin Functionality&quot;
+            &quot;Searching&quot;
           ],
-          &quot;duration&quot;: 2859,
+          &quot;duration&quot;: 3929,
           &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Signin Functionality example&quot;,
+          &quot;fullName&quot;: &quot;Searching search for \&quot;webdriver\&quot;&quot;,
           &quot;location&quot;: null,
           &quot;numPassingAsserts&quot;: 0,
           &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;example&quot;
+          &quot;title&quot;: &quot;search for \&quot;webdriver\&quot;&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Searching&quot;
+          ],
+          &quot;duration&quot;: 2734,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Searching search for \&quot;uit\&quot;&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;search for \&quot;uit\&quot;&quot;
         }
       ],
       &quot;failureMessage&quot;: null
