--- a/report/index.html
+++ b/report/index.html
@@ -144,7 +144,7 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1592543460161,
+  &quot;startTime&quot;: 1592643640823,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
@@ -155,8 +155,8 @@
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1592543467536,
-        &quot;start&quot;: 1592543460232
+        &quot;end&quot;: 1592643646573,
+        &quot;start&quot;: 1592643640885
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -168,31 +168,31 @@
         &quot;updated&quot;: 0,
         &quot;uncheckedKeys&quot;: []
       },
-      &quot;testFilePath&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;google-page.test.js&quot;,
+      &quot;testFilePath&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;providers-page&#x2F;add-a-provider.spec.js&quot;,
       &quot;testResults&quot;: [
         {
           &quot;ancestorTitles&quot;: [
-            &quot;Searching&quot;
+            &quot;Add a provider&quot;
           ],
-          &quot;duration&quot;: 3929,
+          &quot;duration&quot;: 759,
           &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Searching search for \&quot;webdriver\&quot;&quot;,
+          &quot;fullName&quot;: &quot;Add a provider redirect to the \&quot;create\&quot; route when click button \&quot;Thêm mới\&quot;&quot;,
           &quot;location&quot;: null,
           &quot;numPassingAsserts&quot;: 0,
           &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;search for \&quot;webdriver\&quot;&quot;
+          &quot;title&quot;: &quot;redirect to the \&quot;create\&quot; route when click button \&quot;Thêm mới\&quot;&quot;
         },
         {
           &quot;ancestorTitles&quot;: [
-            &quot;Searching&quot;
+            &quot;Add a provider&quot;
           ],
-          &quot;duration&quot;: 2734,
+          &quot;duration&quot;: 528,
           &quot;failureMessages&quot;: [],
-          &quot;fullName&quot;: &quot;Searching search for \&quot;uit\&quot;&quot;,
+          &quot;fullName&quot;: &quot;Add a provider inputs are empty when the \&quot;create\&quot; route first loaded&quot;,
           &quot;location&quot;: null,
           &quot;numPassingAsserts&quot;: 0,
           &quot;status&quot;: &quot;passed&quot;,
-          &quot;title&quot;: &quot;search for \&quot;uit\&quot;&quot;
+          &quot;title&quot;: &quot;inputs are empty when the \&quot;create\&quot; route first loaded&quot;
         }
       ],
       &quot;failureMessage&quot;: null
