--- a/report/index.html
+++ b/report/index.html
@@ -80,7 +80,7 @@
                 <canvas id="test-suites-canvas" width="100" height="100"></canvas>
                 <h2>Test Suites</h2>
                 <div class="list-group">
-                    <p id="test-suites-results" class="list-group-item list-group-item-action">1 passed, 1 total</p>
+                    <p id="test-suites-results" class="list-group-item list-group-item-action">3 passed, 4 total</p>
                 </div>
             </div>
             <!-- /.col-lg-4 -->
@@ -88,7 +88,7 @@
                 <canvas id="tests-canvas" width="100" height="100"></canvas>
                 <h2>Tests</h2>
                 <div class="list-group">
-                    <p id="tests-results" class="list-group-item list-group-item-action">2 passed, 2 total</p>
+                    <p id="tests-results" class="list-group-item list-group-item-action">22 passed, 23 total</p>
                 </div>
             </div>
             <!-- /.col-lg-4 -->
@@ -117,16 +117,16 @@
 }</div>
         <div id="accordion">
             <div class="d-none" id="test-results">{
-  &quot;numFailedTestSuites&quot;: 0,
-  &quot;numFailedTests&quot;: 0,
-  &quot;numPassedTestSuites&quot;: 1,
-  &quot;numPassedTests&quot;: 2,
+  &quot;numFailedTestSuites&quot;: 1,
+  &quot;numFailedTests&quot;: 1,
+  &quot;numPassedTestSuites&quot;: 3,
+  &quot;numPassedTests&quot;: 22,
   &quot;numPendingTestSuites&quot;: 0,
   &quot;numPendingTests&quot;: 0,
   &quot;numRuntimeErrorTestSuites&quot;: 0,
   &quot;numTodoTests&quot;: 0,
-  &quot;numTotalTestSuites&quot;: 1,
-  &quot;numTotalTests&quot;: 2,
+  &quot;numTotalTestSuites&quot;: 4,
+  &quot;numTotalTests&quot;: 23,
   &quot;openHandles&quot;: [],
   &quot;snapshot&quot;: {
     &quot;added&quot;: 0,
@@ -144,19 +144,179 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1592643640823,
+  &quot;startTime&quot;: 1593156195805,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [
     {
       &quot;leaks&quot;: false,
       &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 2,
+      &quot;numPassingTests&quot;: 5,
       &quot;numPendingTests&quot;: 0,
       &quot;numTodoTests&quot;: 0,
       &quot;openHandles&quot;: [],
       &quot;perfStats&quot;: {
-        &quot;end&quot;: 1592643646573,
-        &quot;start&quot;: 1592643640885
+        &quot;end&quot;: 1593156212257,
+        &quot;start&quot;: 1593156196157
+      },
+      &quot;skipped&quot;: false,
+      &quot;snapshot&quot;: {
+        &quot;added&quot;: 0,
+        &quot;fileDeleted&quot;: false,
+        &quot;matched&quot;: 0,
+        &quot;unchecked&quot;: 0,
+        &quot;unmatched&quot;: 0,
+        &quot;updated&quot;: 0,
+        &quot;uncheckedKeys&quot;: []
+      },
+      &quot;testFilePath&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;sign-in&#x2F;sign-in.spec.js&quot;,
+      &quot;testResults&quot;: [
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Sign in&quot;
+          ],
+          &quot;duration&quot;: 6498,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Sign in Sign in with empty username and password&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;Sign in with empty username and password&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Sign in&quot;
+          ],
+          &quot;duration&quot;: 2405,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Sign in Sign in with wrong username and password&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;Sign in with wrong username and password&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Sign in&quot;
+          ],
+          &quot;duration&quot;: 2173,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Sign in Sign in with username and empty password&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;Sign in with username and empty password&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Sign in&quot;
+          ],
+          &quot;duration&quot;: 2302,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Sign in Sign in with empty username and password&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;Sign in with empty username and password&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Sign in&quot;
+          ],
+          &quot;duration&quot;: 2228,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Sign in Sign in with the right username and password&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;Sign in with the right username and password&quot;
+        }
+      ],
+      &quot;failureMessage&quot;: null
+    },
+    {
+      &quot;leaks&quot;: false,
+      &quot;numFailingTests&quot;: 0,
+      &quot;numPassingTests&quot;: 4,
+      &quot;numPendingTests&quot;: 0,
+      &quot;numTodoTests&quot;: 0,
+      &quot;openHandles&quot;: [],
+      &quot;perfStats&quot;: {
+        &quot;end&quot;: 1593156214763,
+        &quot;start&quot;: 1593156196107
+      },
+      &quot;skipped&quot;: false,
+      &quot;snapshot&quot;: {
+        &quot;added&quot;: 0,
+        &quot;fileDeleted&quot;: false,
+        &quot;matched&quot;: 0,
+        &quot;unchecked&quot;: 0,
+        &quot;unmatched&quot;: 0,
+        &quot;updated&quot;: 0,
+        &quot;uncheckedKeys&quot;: []
+      },
+      &quot;testFilePath&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;providers-page&#x2F;view-a-provider.spec.js&quot;,
+      &quot;testResults&quot;: [
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;View a provider&quot;
+          ],
+          &quot;duration&quot;: 1556,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;View a provider has data in table&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;has data in table&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;View a provider&quot;
+          ],
+          &quot;duration&quot;: 3224,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;View a provider same id in url after view detail&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;same id in url after view detail&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;View a provider&quot;
+          ],
+          &quot;duration&quot;: 3346,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;View a provider same id in form after view detail&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;same id in form after view detail&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;View a provider&quot;
+          ],
+          &quot;duration&quot;: 3174,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;View a provider has history import&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;has history import&quot;
+        }
+      ],
+      &quot;failureMessage&quot;: null
+    },
+    {
+      &quot;leaks&quot;: false,
+      &quot;numFailingTests&quot;: 1,
+      &quot;numPassingTests&quot;: 6,
+      &quot;numPendingTests&quot;: 0,
+      &quot;numTodoTests&quot;: 0,
+      &quot;openHandles&quot;: [],
+      &quot;perfStats&quot;: {
+        &quot;end&quot;: 1593156217764,
+        &quot;start&quot;: 1593156196136
       },
       &quot;skipped&quot;: false,
       &quot;snapshot&quot;: {
@@ -174,7 +334,7 @@
           &quot;ancestorTitles&quot;: [
             &quot;Add a provider&quot;
           ],
-          &quot;duration&quot;: 759,
+          &quot;duration&quot;: 1906,
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Add a provider redirect to the \&quot;create\&quot; route when click button \&quot;Thêm mới\&quot;&quot;,
           &quot;location&quot;: null,
@@ -186,13 +346,185 @@
           &quot;ancestorTitles&quot;: [
             &quot;Add a provider&quot;
           ],
-          &quot;duration&quot;: 528,
+          &quot;duration&quot;: 1452,
           &quot;failureMessages&quot;: [],
           &quot;fullName&quot;: &quot;Add a provider inputs are empty when the \&quot;create\&quot; route first loaded&quot;,
           &quot;location&quot;: null,
           &quot;numPassingAsserts&quot;: 0,
           &quot;status&quot;: &quot;passed&quot;,
           &quot;title&quot;: &quot;inputs are empty when the \&quot;create\&quot; route first loaded&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Add a provider&quot;
+          ],
+          &quot;duration&quot;: 2238,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Add a provider case provider name has number&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;case provider name has number&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Add a provider&quot;
+          ],
+          &quot;duration&quot;: 2437,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Add a provider phone wrong format&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;phone wrong format&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Add a provider&quot;
+          ],
+          &quot;duration&quot;: 2458,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Add a provider empty provider address&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;empty provider address&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Add a provider&quot;
+          ],
+          &quot;duration&quot;: 1985,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Add a provider refresh button&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;refresh button&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Add a provider&quot;
+          ],
+          &quot;duration&quot;: 1748,
+          &quot;failureMessages&quot;: [
+            &quot;Error: \u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoBe\u001b[2m(\u001b[22m\u001b[32mexpected\u001b[39m\u001b[2m) &#x2F;&#x2F; Object.is equality\u001b[22m\n\nExpected: \u001b[32mtrue\u001b[39m\nReceived: \u001b[31mfalse\u001b[39m\n    at Object.&lt;anonymous&gt; (&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;providers-page&#x2F;add-a-provider.spec.js:82:21)\n    at processTicksAndRejections (internal&#x2F;process&#x2F;task_queues.js:97:5)&quot;
+          ],
+          &quot;fullName&quot;: &quot;Add a provider submit a provider&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;failed&quot;,
+          &quot;title&quot;: &quot;submit a provider&quot;
+        }
+      ],
+      &quot;failureMessage&quot;: &quot;\u001b[1m\u001b[31m  \u001b[1m● \u001b[22m\u001b[1mAdd a provider › submit a provider\u001b[39m\u001b[22m\n\n    \u001b[2mexpect(\u001b[22m\u001b[31mreceived\u001b[39m\u001b[2m).\u001b[22mtoBe\u001b[2m(\u001b[22m\u001b[32mexpected\u001b[39m\u001b[2m) &#x2F;&#x2F; Object.is equality\u001b[22m\n\n    Expected: \u001b[32mtrue\u001b[39m\n    Received: \u001b[31mfalse\u001b[39m\n\u001b[2m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m 80 | \u001b[39m      address\u001b[33m:\u001b[39m \u001b[32m&#39;Thôn 2&#39;\u001b[39m\u001b[33m,\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m 81 | \u001b[39m    })\u001b[33m;\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m    \u001b[0m\u001b[31m\u001b[1m&gt;\u001b[22m\u001b[2m\u001b[39m\u001b[90m 82 | \u001b[39m    expect(success)\u001b[33m.\u001b[39mtoBe(\u001b[36mtrue\u001b[39m)\u001b[33m;\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m    | \u001b[39m                    \u001b[31m\u001b[1m^\u001b[22m\u001b[2m\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m 83 | \u001b[39m  })\u001b[33m;\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m 84 | \u001b[39m})\u001b[33m;\u001b[39m\u001b[0m\u001b[22m\n\u001b[2m    \u001b[0m \u001b[90m 85 | \u001b[39m\u001b[0m\u001b[22m\n\u001b[2m\u001b[22m\n\u001b[2m      \u001b[2mat Object.&lt;anonymous&gt; (\u001b[22m\u001b[2m\u001b[0m\u001b[36mtest&#x2F;providers-page&#x2F;add-a-provider.spec.js\u001b[39m\u001b[0m\u001b[2m:82:21)\u001b[22m\u001b[2m\u001b[22m\n&quot;
+    },
+    {
+      &quot;leaks&quot;: false,
+      &quot;numFailingTests&quot;: 0,
+      &quot;numPassingTests&quot;: 7,
+      &quot;numPendingTests&quot;: 0,
+      &quot;numTodoTests&quot;: 0,
+      &quot;openHandles&quot;: [],
+      &quot;perfStats&quot;: {
+        &quot;end&quot;: 1593156229272,
+        &quot;start&quot;: 1593156196118
+      },
+      &quot;skipped&quot;: false,
+      &quot;snapshot&quot;: {
+        &quot;added&quot;: 0,
+        &quot;fileDeleted&quot;: false,
+        &quot;matched&quot;: 0,
+        &quot;unchecked&quot;: 0,
+        &quot;unmatched&quot;: 0,
+        &quot;updated&quot;: 0,
+        &quot;uncheckedKeys&quot;: []
+      },
+      &quot;testFilePath&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;Desktop&#x2F;sPhoneTesting&#x2F;test&#x2F;providers-page&#x2F;edit-a-provider.spec.js&quot;,
+      &quot;testResults&quot;: [
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Edit a provider&quot;
+          ],
+          &quot;duration&quot;: 4170,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Edit a provider same id in url after click edit&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;same id in url after click edit&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Edit a provider&quot;
+          ],
+          &quot;duration&quot;: 3279,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Edit a provider same id in form after click edit&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;same id in form after click edit&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Edit a provider&quot;
+          ],
+          &quot;duration&quot;: 3113,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Edit a provider not have history import&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;not have history import&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Edit a provider&quot;
+          ],
+          &quot;duration&quot;: 4869,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Edit a provider add more to address&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;add more to address&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Edit a provider&quot;
+          ],
+          &quot;duration&quot;: 3082,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Edit a provider can&#39;t add more to phone&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;can&#39;t add more to phone&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Edit a provider&quot;
+          ],
+          &quot;duration&quot;: 4112,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Edit a provider add more to provider name&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;add more to provider name&quot;
+        },
+        {
+          &quot;ancestorTitles&quot;: [
+            &quot;Edit a provider&quot;
+          ],
+          &quot;duration&quot;: 2964,
+          &quot;failureMessages&quot;: [],
+          &quot;fullName&quot;: &quot;Edit a provider Can&#39;t edit provider id anyway&quot;,
+          &quot;location&quot;: null,
+          &quot;numPassingAsserts&quot;: 0,
+          &quot;status&quot;: &quot;passed&quot;,
+          &quot;title&quot;: &quot;Can&#39;t edit provider id anyway&quot;
         }
       ],
       &quot;failureMessage&quot;: null
@@ -256,7 +588,6 @@
   &quot;testSequencer&quot;: &quot;&#x2F;home&#x2F;loia5tqd001&#x2F;.config&#x2F;yarn&#x2F;global&#x2F;node_modules&#x2F;@jest&#x2F;test-sequencer&#x2F;build&#x2F;index.js&quot;,
   &quot;updateSnapshot&quot;: &quot;new&quot;,
   &quot;useStderr&quot;: false,
-  &quot;verbose&quot;: true,
   &quot;watch&quot;: false,
   &quot;watchAll&quot;: false,
   &quot;watchman&quot;: true
